Closed Bug 1587057 Opened 5 years ago Closed 5 years ago

"[fluent] Missing translations in en-US: wmfvpxvideo-crash-guard. Localization.jsm:202:13" warning in Browser Console at about:support after landing patches from bug #1521370

Categories

(Core :: Graphics, defect, P5)

x86_64
Windows 7
defect

Tracking

()

VERIFIED FIXED
mozilla73
Tracking Status
firefox-esr60 --- wontfix
firefox-esr68 --- wontfix
firefox67 --- wontfix
firefox68 --- wontfix
firefox69 --- wontfix
firefox70 --- wontfix
firefox71 --- wontfix
firefox72 --- wontfix
firefox73 --- verified

People

(Reporter: Virtual, Assigned: Gijs)

References

(Regression)

Details

(Keywords: nightly-community, regression, reproducible)

Attachments

(1 file)

Similar as bug #1557846.

STR:

  1. Get affected by bug #1570046
  2. Open Troubleshooting Information ( about:support )
  3. Open Browser Console ( Ctrl+Shift+J )
    and see this warning:

[fluent] Missing translations in en-US: wmfvpxvideo-crash-guard. Localization.jsm:202:13

@ :Gijs - You fixed bug #1557846, could you please look on this bug and maybe fix it too? Thank you very much in advance!

Has Regression Range: --- → yes
Has STR: --- → yes
Flags: needinfo?(gijskruitbosch+bugs)
Priority: P2 → --

This regressed in bug 1521370 - jya, can you update the comment at https://hg.mozilla.org/mozilla-central/rev/a6724ca6cb915b86bd84fdf2c3ec3bfb0072302b#l4.7 , and add one at https://hg.mozilla.org/mozilla-central/rev/a6724ca6cb915b86bd84fdf2c3ec3bfb0072302b#l3.16 , indicating that any changes to that list need to be reflected in the .ftl file, too (and add a string there that describes what "wmfvpxvideo" is (which I'm not sure about)) ?

Component: Audio/Video: Playback → General
Flags: needinfo?(gijskruitbosch+bugs) → needinfo?(jyavenard)
Product: Core → Toolkit
Version: 60 Branch → Trunk
Component: General → Audio/Video: Playback
Product: Toolkit → Core

(In reply to :Gijs (he/him) from comment #1)

This regressed in bug 1521370 - jya, can you update the comment at https://hg.mozilla.org/mozilla-central/rev/a6724ca6cb915b86bd84fdf2c3ec3bfb0072302b#l4.7 , and add one at https://hg.mozilla.org/mozilla-central/rev/a6724ca6cb915b86bd84fdf2c3ec3bfb0072302b#l3.16 , indicating that any changes to that list need to be reflected in the .ftl file, too (and add a string there that describes what "wmfvpxvideo" is (which I'm not sure about)) ?

This is gfx code. Redirecting to Jeff

Component: Audio/Video: Playback → Graphics
Flags: needinfo?(jyavenard) → needinfo?(jgilbert)
Priority: -- → P5

wmfvpxvideo is the WMF VPX codepath, I would guess. There's not much to describe about it. (I'm not sure what we're localizing here)

I don't know how to do FTL stuff. Can you propose a comment that makes sense here, like which file to add this to?

Is there any way to start detecting this stuff in CI?

Flags: needinfo?(jgilbert) → needinfo?(gijskruitbosch+bugs)

(In reply to Jeff Gilbert [:jgilbert] from comment #3)

wmfvpxvideo is the WMF VPX codepath, I would guess. There's not much to describe about it. (I'm not sure what we're localizing here)

I don't know how to do FTL stuff. Can you propose a comment that makes sense here, like which file to add this to?

There are existing FTL entries for the other crash guards, they're here: https://searchfox.org/mozilla-central/rev/171109434c6f2fe086af3b2322839b346a112a99/toolkit/locales/en-US/toolkit/about/aboutSupport.ftl#255 (though it looks like the D3D9 one is broken because it's called crash-**b**uard; I'll file a separate bug for that). They're all slightly more readable descriptions of the respective crash guards; there's no long explanations or anything...

My suggestion of a comment is more about updating the enums / gfx code that lists the possible crash guards (which already point to other bits of code that need to stay in sync) to indicate that they'll need a localized description, and point that to aboutSupport.ftl, too.

They're used rather indirectly from https://searchfox.org/mozilla-central/rev/171109434c6f2fe086af3b2322839b346a112a99/toolkit/content/aboutSupport.js#738-749 - data.crashGuards is generated in Troubleshooting.jsm ( https://searchfox.org/mozilla-central/rev/171109434c6f2fe086af3b2322839b346a112a99/toolkit/modules/Troubleshoot.jsm#631 ). The expression guard.type + "CrashGuard" will eventually be normalized into a fluent ID, where SentenceCase gets normalized into sentence-case ( https://searchfox.org/mozilla-central/rev/171109434c6f2fe086af3b2322839b346a112a99/toolkit/content/aboutSupport.js#49 ).

Is there any way to start detecting this stuff in CI?

This is an excellent question. In CI, missing ftl keys will throw. So just loading about:support when one of these crash guards (unsure what that means...) is reported by the gfx code as present would cause exceptions in CI, I think. We don't have great coverage for about:support as it is, unfortunately - but I'm happy to help with the Troubleshooting.jsm / about:support / browser mochitest side of things. What I don't know is how to make the gfx code effectively "fake" the crash guard data so it reports all possible crash guards or something (looks like there can be more than one?).

Alternatively, we could stop localizing this and dump the identifier of the crash guard directly in the document without localization. I think right now, the readable strings do help, but I don't know how localizable they really are (e.g. "OpenGL" is just a name, but I guess maybe "Video Decoder" in "D3D11 Video Decoder" is something that you can meaningfully translate...)

Flags: needinfo?(gijskruitbosch+bugs) → needinfo?(jgilbert)
Assignee: nobody → jgilbert
Assignee: jgilbert → nobody
Status: ASSIGNED → NEW
Flags: needinfo?(jgilbert)
Assignee: nobody → gijskruitbosch+bugs
Status: NEW → ASSIGNED
Pushed by gijskruitbosch@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/daf259f8aaf1
add localizable string for wmfvpxvideo crash guard, r=jgilbert,fluent-reviewers,flod
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73

I'm confirming that bug is fixed, starting in Mozilla Firefox Nightly 73.0a1 (2020-01-05), so I'm marking this bug as VERIFIED.
Thank you very much! \o/

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: