Bug 1587057 - add localizable string for wmfvpxvideo crash guard, r=jgilbert,fluent-reviewers,flod

Differential Revision: https://phabricator.services.mozilla.com/D58650

--HG--
extra : moz-landing-system : lando