toolkit/locales/en-US/toolkit/about/aboutSupport.ftl
@@ -270,6 +270,7 @@ d3d11layers-crash-guard = D3D11 Compositor
 d3d11video-crash-guard = D3D11 Video Decoder
 d3d9video-crash-guard = D3D9 Video Decoder
 glcontext-crash-guard = OpenGL
+wmfvpxvideo-crash-guard = WMF VPX Video Decoder
 
 reset-on-next-restart = Reset on Next Restart
 gpu-process-kill-button = Terminate GPU Process
